# scrap

./: .gitignore  README.md  convex.json  package-lock.json  package.json  pnpm-lock.yaml
backend/: .env.example  README.md  gcal-test.js  get-google-token.js  index.js  package-lock.json  package.json  pnpm-lock.yaml  poke-agent.test.js
backend/gemini/: README.md  calendar.txt  pyproject.toml  requirements.txt  summarize.py  summarize_with_gcal.py  summarize_with_gcal_gmail.py
backend/gmail-api/: README.md  client.js  fetchEmails.js
backend/middleware/: requestLogger.js
convex/: README.md  auth.ts  schema.ts  scraps.ts
convex/_generated/: api.d.ts  api.ts  dataModel.d.ts
convex/otp/: TwilioSDK.ts  TwilioVerify.ts
mac_messages_mcp/: README.md  get_latest_message_cli.py  get_messages_cli.py  info.md  run-for-proxy.sh  test_server.py
mac_messages_mcp/mac_messages_mcp/: __init__.py  messages.py  phone_country.py  server.py
mobile/: .env.example  README.md  app.json  babel.config.js  jest.config.js  metro.config.js  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
mobile/app/: _layout.tsx  index.tsx  journal.tsx  sign-in.tsx
mobile/app/(tabs)/: _layout.tsx  index.tsx  two.tsx
mobile/convex/_generated/: api.ts  dataModel.d.ts
mobile/src/api/: client.ts
mobile/src/auth/: storage.ts
poke/: get_primer.py  install_cron.sh  priming_reqs.md
scrap-mcp/: README.md  package-lock.json  package.json  server.ts
scripts/: run-test-server.sh  start-mcp-proxy.sh
weekly_summary/: README.md  requirements.txt  weekly_summary.py
(+14 files in other folders)
